Sort and reformat bib entries
and update some of the recently published bibcodes

--- a/achds.bib
+++ b/achds.bib
@@ -1,3 +1,16 @@
+@article{1742-6596-425-6-062008,
+  author =       {U K Pedersen and N Rees and M Basham and F J K
+                  Ferner},
+  title =        {Handling high data rate detectors at Diamond Light
+                  Source},
+  journal =      {Journal of Physics: Conference Series},
+  volume =       425,
+  number =       6,
+  pages =        062008,
+  doi =          {10.1088/1742-6596/425/6/062008},
+  year =         2013,
+}
+
 @INPROCEEDINGS{1979ipia.coll..445W,
   author =       {{Wells}, D.~C. and {Greisen}, E.~W.},
   title =        "{FITS -- a Flexible Image Transport System}",
@@ -22,6 +35,21 @@
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@INPROCEEDINGS{1980SPIE..264...70P,
+  author =       {{Pavelin}, C.~J. and {Walter}, A.~J.~H.},
+  title =        "{Proposed STARLINK Software Environment}",
+  booktitle =    {Applications of Digital Image Processing to
+                  Astronomy},
+  year =         1980,
+  series =       {Proc.\ SPIE},
+  volume =       264,
+  editor =       {{Elliott}, Denis~A.},
+  pages =        70,
+  doi =          {10.1117/12.959785},
+  adsurl =       {http://adsabs.harvard.edu/abs/1980SPIE..264...70P},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @INPROCEEDINGS{1980SPIE..264..298G,
   author =       {{Greisen}, E.~W. and {Wells}, D.~C. and {Harten},
                   R.~H.},
@@ -36,21 +64,6 @@
   pages =        298,
   doi =          {10.1117/12.959819},
   adsurl =       {http://adsabs.harvard.edu/abs/1980SPIE..264..298G},
-  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@INPROCEEDINGS{1980SPIE..264...70P,
-  author =       {{Pavelin}, C.~J. and {Walter}, A.~J.~H.},
-  title =        "{Proposed STARLINK Software Environment}",
-  booktitle =    {Applications of Digital Image Processing to
-                  Astronomy},
-  year =         1980,
-  series =       {Proc.\ SPIE},
-  volume =       264,
-  editor =       {{Elliott}, Denis~A.},
-  pages =        70,
-  doi =          {10.1117/12.959785},
-  adsurl =       {http://adsabs.harvard.edu/abs/1980SPIE..264...70P},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -136,15 +149,19 @@
 }
 
 @ARTICLE{1988A&AS...73..359G,
-   author =      {{Grosb{\o}l}, P. and {Harten}, R.~H. and {Greisen}, E.~W. and {Wells}, D.~C.},
-    title =      "{Generalized extensions and blocking factors for FITS}",
+  author =       {{Grosb{\o}l}, P. and {Harten}, R.~H. and {Greisen},
+                  E.~W. and {Wells}, D.~C.},
+  title =        "{Generalized extensions and blocking factors for
+                  FITS}",
   journal =      {\aaps},
- keywords =      {Data Transmission, Image Processing, Magnetic Tape Transports, Astronomy, Computer Programming, Data Processing, Data Recording},
-     year =      1988,
-    month =      jun,
-   volume =      73,
-    pages =      {359-364},
-   adsurl =      {http://adsabs.harvard.edu/abs/1988A%26AS...73..359G},
+  keywords =     {Data Transmission, Image Processing, Magnetic Tape
+                  Transports, Astronomy, Computer Programming, Data
+                  Processing, Data Recording},
+  year =         1988,
+  month =        jun,
+  volume =       73,
+  pages =        {359-364},
+  adsurl =       {http://adsabs.harvard.edu/abs/1988A%26AS...73..359G},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -264,18 +281,18 @@
 }
 
 @INPROCEEDINGS{1992ASPC...25..126A,
-   author = {{Allan}, P.~M.},
-    title = "{The ADAM software environment}",
-booktitle = {Astronomical Data Analysis Software and Systems I},
-     year = 1992,
-   series = {\aspconf},
-   volume = 25,
-   editor = {{Worrall}, D.~M. and {Biemesderfer}, C. and {Barnes}, J.},
-    pages = {126},
-   adsurl = {http://adsabs.harvard.edu/abs/1992ASPC...25..126A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+  author =       {{Allan}, P.~M.},
+  title =        "{The ADAM software environment}",
+  booktitle =    {Astronomical Data Analysis Software and Systems I},
+  year =         1992,
+  series =       {\aspconf},
+  volume =       25,
+  editor =       {{Worrall}, D.~M. and {Biemesderfer}, C. and
+                  {Barnes}, J.},
+  pages =        126,
+  adsurl =       {http://adsabs.harvard.edu/abs/1992ASPC...25..126A},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
-
 
 @INPROCEEDINGS{1992ESOC...41...47M,
   author =       {{Meyerdierks}, H.},
@@ -478,15 +495,17 @@ booktitle = {Astronomical Data Analysis Software and Systems I},
 }
 
 @INPROCEEDINGS{1995ASPC...77..229J,
-   author =      {{Jennings}, D.~G. and {Pence}, W.~D. and {Folk}, M.},
-    title =      "{Convert: Bridging the Scientific Data Format Chasm}",
-booktitle =      {Astronomical Data Analysis Software and Systems IV},
-     year =      1995,
-   series =      {\aspconf},
-   volume =      77,
-   editor =      {{Shaw}, R.~A. and {Payne}, H.~E. and {Hayes}, J.~J.~E.},
-    pages =      {229},
-   adsurl =      {http://adsabs.harvard.edu/abs/1995ASPC...77..229J},
+  author =       {{Jennings}, D.~G. and {Pence}, W.~D. and {Folk}, M.},
+  title =        "{Convert: Bridging the Scientific Data Format
+                  Chasm}",
+  booktitle =    {Astronomical Data Analysis Software and Systems IV},
+  year =         1995,
+  series =       {\aspconf},
+  volume =       77,
+  editor =       {{Shaw}, R.~A. and {Payne}, H.~E. and {Hayes},
+                  J.~J.~E.},
+  pages =        229,
+  adsurl =       {http://adsabs.harvard.edu/abs/1995ASPC...77..229J},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -531,12 +550,14 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
 @INPROCEEDINGS{1999ASPC..172..487P,
   author =       {{Pence}, W.},
   title =        "{CFITSIO, v2.0: A New Full-Featured Data Interface}",
-  booktitle =    {Astronomical Data Analysis Software and Systems VIII},
+  booktitle =    {Astronomical Data Analysis Software and Systems
+                  VIII},
   year =         1999,
   series =       {\aspconf},
   volume =       172,
-  editor =       {{Mehringer}, D.~M. and {Plante}, R.~L. and {Roberts}, D.~A.},
-  pages =        {487},
+  editor =       {{Mehringer}, D.~M. and {Plante}, R.~L. and
+                  {Roberts}, D.~A.},
+  pages =        487,
   adsurl =       {http://adsabs.harvard.edu/abs/1999ASPC..172..487P},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
@@ -626,6 +647,21 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2002A&G....43a..25P,
+  author =       {{Pimbblet}, K.~A.},
+  title =        "{Starlink: Software and sociology in UK astronomy}",
+  journal =      {Astronomy and Geophysics},
+  eprint =       {astro-ph/0112026},
+  year =         2002,
+  month =        feb,
+  volume =       43,
+  number =       1,
+  pages =        {010000-1},
+  doi =          {10.1046/j.1468-4004.2002.43125.x},
+  adsurl =       {http://adsabs.harvard.edu/abs/2002A%26G....43a..25P},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @INPROCEEDINGS{2002ASPC..281...20G,
   author =       {{Giaretta}, D. and {Wallace}, P. and {Bly}, M. and
                   {McIlwrath}, B. and {Page}, C. and {Gray}, N. and
@@ -640,21 +676,6 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
                   T.~H.},
   pages =        20,
   adsurl =       {http://adsabs.harvard.edu/abs/2002ASPC..281...20G},
-  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{2002A&G....43a..25P,
-  author =       {{Pimbblet}, K.~A.},
-  title =        "{Starlink: Software and sociology in UK astronomy}",
-  journal =      {Astronomy and Geophysics},
-  eprint =       {astro-ph/0112026},
-  year =         2002,
-  month =        feb,
-  volume =       43,
-  number =       1,
-  pages =        {010000-1},
-  doi =          {10.1046/j.1468-4004.2002.43125.x},
-  adsurl =       {http://adsabs.harvard.edu/abs/2002A%26G....43a..25P},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -714,6 +735,17 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@InProceedings{2004Rew,
+  author =       {Russell K. Rew and E. J. Hartnett},
+  title =        "{Merging NetCDF and HDF5}",
+  url =          {https://ams.confex.com/ams/pdfpapers/73771.pdf},
+  booktitle =    {21st International Conference on Interactive
+                  Information Processing Systems (IIPS) for
+                  Meteorology, Oceanography, and Hydrology},
+  pages =        {P1.11},
+  year =         2004,
+}
+
 @INPROCEEDINGS{2004SPIE.5492..998T,
   author =       {{Tinney}, C.~G. and {Ryder}, S.~D. and {Ellis},
                   S.~C. and {Churilov}, V. and {Dawson}, J. and
@@ -766,6 +798,18 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   pages =        22,
   adsurl =       {http://adsabs.harvard.edu/abs/2005ASPC..347...22D},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@InProceedings{2005Yang,
+  author =       {MuQun Yang and R. E. McGrath and M. Folk},
+  title =        "{HDF5 --- A High performance data Format for Earth
+                  Science}",
+  url =          {https://ams.confex.com/ams/pdfpapers/88475.pdf},
+  booktitle =    {21st International Conference on Interactive
+                  Information Processing Systems (IIPS) for
+                  Meteorology, Oceanography, and Hydrology},
+  pages =        {P2.42},
+  year =         2005,
 }
 
 @ARTICLE{2006A&A...446..747G,
@@ -1111,23 +1155,113 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   primaryClass = "astro-ph.IM",
   keywords =     {Astrophysics - Instrumentation and Methods for
                   Astrophysics, 85-04},
-  year =         2014,
+  year =         2015,
   volume =       {in press},
   doi =          {10.1016/j.ascom.2014.06.002},
   adsurl =       {http://adsabs.harvard.edu/abs/2014arXiv1403.2801V},
   adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@Article{2014Skoda,
-  author =       {Petr \v{S}koda and Peter W. Draper and Margarida
-                  Castro Neves and David Andre\v{s}i\v{c} and Tim
-                  Jenness},
-  title =        "{Spectroscopic Analysis in the Virtual Observatory
-                  Environment with SPLAT-VO}",
-  journal =      {Astron.\ Comp.},
+@INPROCEEDINGS{2014SPIE.9152E..2WJ,
+  author =       {Tim Jenness and Martin C. Shepherd and Reinhold
+                  Schaaf and Jack Sayers and Volker Ossenkopf and
+                  Thomas Nikola and Gaelen Marsden and Ronan Higgins
+                  and Kevin Edwards and Adam Brazier},
+  title =        "{An overview of the planned CCAT software system}",
+  booktitle =    {Software and Cyberinfrastructure for Astronomy III},
+  volume =       9152,
+  pages =        {91522W},
   year =         2014,
+  doi =          {10.1117/12.2056516},
+  archivePrefix ="arXiv",
+  eprint =       {1406.1515},
+  editor =       {Gianluca Chiozzi and Nicole M. Radziwill},
+  series =       {Proc.\ SPIE},
+}
+
+@INPROCEEDINGS{2014SPIE.9153E..03B,
+  author =       {{Bintley}, D. and {Holland}, W.~S. and {MacIntosh},
+                  M.~J. and {Friberg}, P. and {Bell}, G.~S. and
+                  {Berke}, D.~A. and {Berry}, D.~S. and {Berthold},
+                  R.~M. and {Cookson}, J.~L. and {Coulson}, I.~M. and
+                  {Currie}, M.~J. and {Dempsey}, J.~T. and {Gibb},
+                  A.~G. and {Gorges}, B.~H. and {Graves}, S.~F. and
+                  {Jenness}, T. and {Johnstone}, D.~I. and {Parsons},
+                  H.~A.~L. and {Thomas}, H.~S. and {Walther}, C. and
+                  {Wouterloot}, J.~G.~A.},
+  title =        "{SCUBA-2: an update on the performance of the 10,000
+                  pixel bolometer camera after two years of science
+                  operation at the JCMT}",
+  booktitle =    {Millimeter, Submillimeter, and Far-Infrared
+                  Detectors and Instrumentation for Astronomy VII},
+  year =         2014,
+  series =       {\procspie},
+  volume =       9153,
+  editor =       {Wayne S. Holland and Jonas Zmuidzinas},
+  month =        aug,
+  pages =        915303,
+  doi =          {10.1117/12.2055231},
+  adsurl =       {http://adsabs.harvard.edu/abs/2014SPIE.9153E..03B},
+  adsnote =      {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@InProceedings{2014SPIE9152-93,
+  author =       {Graham S. Bell and Sarah F. Graves and Malcolm
+                  J. Currie and David S. Berry and Harriet
+                  A. L. Parsons and Tim Jenness and Russell O. Redman
+                  and Jessica T. Dempsey and Douglas I. Johnstone and
+                  Frossie Economou },
+  title =        "{Advanced data products for the JCMT Science
+                  Archive}",
+  booktitle =    "{Software and Cyberinfrastructure for Astronomy
+                  III}",
+  year =         2014,
+  editor =       {Gianluca Chiozzi and Nicole M. Radziwill},
+  volume =       9152,
+  series =       {\procspie},
+  pages =        {91522J},
+  doi =          {10.1117/12.2054983},
+}
+
+@Article{2015A&C.....9...40J,
+  author =       {Tim Jenness and Frossie Economou},
+  title =        "{ORAC-DR: A generic data reduction pipeline
+                  infrastructure}",
+  journal =      {Astron.\ Comp},
+  year =         2015,
+  archivePrefix ="arXiv",
+  eprint =       {1410.7509},
+  doi =          {10.1016/j.ascom.2014.10.005},
+  pages =        40,
+  volume =       9,
+}
+
+@Article{2015Economou,
+  author =       {Frossie Economou and S\'{e}verin Gaudet and Tim
+                  Jenness and Russell O.\ Redman and Sharon Goliath
+                  and Patrick Dowler and Malcolm J. Currie and Graham
+                  S. Bell and Sarah F. Graves and John Ouellette and
+                  David Schade and Antonio Chrysostomou},
+  title =        "{Observatory/data centre partnerships and the
+                  VO-centric archive: The JCMT Science Archive
+                  experience}",
+  archivePrefix ="arXiv",
+  eprint =       {1412.4399},
+  journal =      {Astron.\ Comp.},
+  year =         2015,
   volume =       {in press},
-  doi =          {10.1016/j.ascom.2014.06.001},
+}
+
+@Article{2015Jenness,
+  author =       {Tim Jenness and others},
+  title =        "{Learning from 25 years of the extensible
+                  \emph{N}-Dimensional Data Format}",
+  journal =      {Astron.\ Comp.},
+  year =         2015,
+  archivePrefix ="arXiv",
+  eprint =       {1410.7513},
+  doi =          {10.1016/j.ascom.2014.11.001},
+  volume =       {in press}
 }
 
 @Article{2015Thomas,
@@ -1138,31 +1272,6 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   year =         2015,
   volume =       {submitted},
 }
-
-@Article{2015oracdr,
-  author =       {Tim Jenness and Frossie Economou},
-  title =        "{ORAC-DR: A generic data reduction pipeline infrastructure}",
-  journal =      {Astron.\ Comp},
-  year =         2015,
-  archivePrefix = "arXiv",
-  eprint =    {1410.7509},
-  doi =          {10.1016/j.ascom.2014.10.005},
-  pages =        {40},
-  volume =       {9},
-}
-
-@Article{2015Jenness,
-  author =       {Tim Jenness and others},
-  title =        "{Learning from 25 years of the extensible
-                  \emph{N}-Dimensional Data Format}",
-  journal =      {Astron.\ Comp.},
-  year =         {2015},
-  archivePrefix ="arXiv",
-  eprint =       {1410.7513},
-  doi =          {10.1016/j.ascom.2014.11.001},
-  volume =       {in press}
-}
-
 
 @ARTICLE{660194,
   author =       {Severance, C.},
@@ -1178,6 +1287,43 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
                   computing;Proposals;Springs},
   doi =          {10.1109/MC.1998.660194},
   ISSN =         {0018-9162},
+}
+
+@inproceedings{B1_adassxxiv,
+  author =       "Jessica Mink and Robert G. Mann and Robert Hanisch
+                  and Arnold Rots and Rob Seaman and Tim Jenness and
+                  Brian Thomas",
+  booktitle =    "Astronomical Data Analysis Software and Systems
+                  XXIV",
+  title =        "{The Past, Present and Future of Astronomical Data
+                  Formats}",
+  year =         2015,
+  editor =       "Taylor, A. R. and Stil, J. M.",
+  volume =       "in press",
+  archivePrefix ="arXiv",
+  eprint =       {1411.0996},
+  series =       "ASP Conf.\ Ser.",
+}
+
+@article{Dougherty:2009:UBI:1562764.1562781,
+  author =       {Dougherty, Matthew T. and Folk, Michael J. and
+                  Zadok, Erez and Bernstein, Herbert J. and Bernstein,
+                  Frances C. and Eliceiri, Kevin W. and Benger, Werner
+                  and Best, Christoph},
+  title =        "{Unifying Biological Image Formats with HDF5}",
+  journal =      {Commun. ACM},
+  issue_date =   {October 2009},
+  volume =       52,
+  number =       10,
+  month =        oct,
+  year =         2009,
+  issn =         {0001-0782},
+  pages =        {42--47},
+  numpages =     6,
+  doi =          {10.1145/1562764.1562781},
+  acmid =        1562781,
+  publisher =    {ACM},
+  address =      {New York, NY, USA},
 }
 
 @Misc{Folk2010,
@@ -1234,6 +1380,19 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   address =      {Berkeley, CA, USA},
 }
 
+@inproceedings{O4-4_adassxxiv,
+  author =       "Daniel Price and L. Greenhill and B. Barsdell",
+  booktitle =    "Astronomical Data Analysis Software and Systems
+                  XXIV",
+  title =        {{Is HDF5 a good format to replace UVFITS?}},
+  year =         2014,
+  archivePrefix ="arXiv",
+  eprint =       {1410.8788},
+  editor =       "Taylor, A. R. and Stil, J. M.",
+  volume =       "in press",
+  series =       "\aspconf",
+}
+
 @INPROCEEDINGS{P01_adassxxiii,
   author =       {Graham S. Bell and Malcolm J. Currie and Russell
                   O. Redman and Maren Purves and Tim Jenness},
@@ -1247,21 +1406,18 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   series =       {\aspconf},
 }
 
-@INPROCEEDINGS{jenness_spie2014,
-  author =       {Tim Jenness and Martin C. Shepherd and Reinhold
-                  Schaaf and Jack Sayers and Volker Ossenkopf and
-                  Thomas Nikola and Gaelen Marsden and Ronan Higgins
-                  and Kevin Edwards and Adam Brazier},
-  title =        "{An overview of the planned CCAT software system}",
-  booktitle =    {Software and Cyberinfrastructure for Astronomy III},
-  volume =       9152,
-  pages =        {91522W},
+@inproceedings{P3-1_adassxxiv,
+  author =       {Reinhold Schaaf and Adam Brazier and Tim Jenness and
+                  Thomas Nikola and Martin Shepherd},
+  booktitle =    {Astronomical Data Analysis Software and Systems
+                  XXIV},
+  title =        {{A new HDF5 based raw data model for CCAT}},
   year =         2014,
-  doi =          {10.1117/12.2056516},
   archivePrefix ="arXiv",
-  eprint =       {1406.1515},
-  editor =       {Gianluca Chiozzi and Nicole M. Radziwill},
-  series =       {Proc.\ SPIE},
+  eprint =       {1410.8788},
+  editor =       "Taylor, A. R. and Stil, J. M.",
+  volume =       "in press",
+  series =       "\aspconf",
 }
 
 @InProceedings{P82_adassxxiii,
@@ -1278,33 +1434,6 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   series =       {\aspconf},
 }
 
-@InProceedings{P90_adassxxiii,
-  author =       {Brian Thomas and others},
-  title =        "{Significant problems in FITS limit its use in
-                  modern astronomical research}",
-  booktitle =    {Astronomical Data Analysis Software and Systems
-                  XXIII},
-  pages =        351,
-  volume =       485,
-  year =         2014,
-  editor =       {Nadine Manset and P. Forshay},
-  series =       {\aspconf},
-}
-
-@InProceedings{P91_adassxxiii,
-  author =       {Frossie Economou and Tim Jenness and Malcolm
-                  J. Currie and David S. Berry},
-  title =        {{Advantages of extensible self-described data
-                  formats: Lessons learned from NDF}},
-  booktitle =    {Astronomical Data Analysis Software and Systems
-                  XXIII},
-  pages =        355,
-  volume =       485,
-  year =         2014,
-  editor =       {Nadine Manset and P. Forshay},
-  series =       {\aspconf},
-}
-
 @techreport{SGP38,
   author =       {M. J. Currie and P. T. Wallace and
                   R. F. Warren-Smith},
@@ -1315,6 +1444,16 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   year =         1988,
 }
 
+@techreport{SSN23,
+  author =       {S. E. Rankin and M. J. Bly and T. M . Gledhill and
+                  C. A. Clayton},
+  title =        "{Starlink Benchmarking Utility}",
+  type =         {Starlink System Note},
+  number =       23,
+  institution =  {Starlink Project},
+  year =         2003,
+}
+
 @techreport{SSN27a,
   author =       {W. F. Lupton},
   title =        "{HDS -- Hierarchical Data System}",
@@ -1322,6 +1461,35 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   number =       27,
   institution =  {Starlink Project},
   year =         1989,
+}
+
+@techreport{SSN4,
+  author =       {P. C. T. Rees and A. J. Chipperfield and
+                  P. W. Draper},
+  title =        "{EMS --- Error Message Service Programmer's Manual}",
+  type =         {Starlink System Note},
+  number =       4,
+  institution =  {Starlink Project},
+  year =         2008,
+}
+
+@techreport{SSN69,
+  author =       {Mark B. Taylor},
+  title =        "{CCDBIG: Assessing CCDPACK resource usage for large
+                  data sets}",
+  type =         {Starlink System Note},
+  number =       69,
+  institution =  {Starlink Project},
+  year =         1998,
+}
+
+@techreport{SUN102,
+  author =       {Malcolm J. Currie},
+  title =        "{HDSTRACE --- Listing HDS Data Files}",
+  type =         {Starlink User Note},
+  number =       102,
+  institution =  {Starlink Project},
+  year =         2014,
 }
 
 @techreport{SUN11,
@@ -1400,6 +1568,16 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   number =       229
 }
 
+@techreport{SUN245,
+  author =       {A. J. Chipperfield},
+  title =        "{HDSTOOLS --- Tools to Display and Edit HDS
+                  Objects}",
+  type =         {Starlink User Note},
+  number =       245,
+  institution =  {Starlink Project},
+  year =         2002,
+}
+
 @techreport{SUN33,
   author =       {R. F. Warren-Smith and D. S. Berry},
   title =        "{NDF -- Routines for Accessing the Exensible
@@ -1441,21 +1619,14 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
 }
 
 @techreport{SUN7,
-  author =       {S. M. Beard and P. M. Allan and Malcolm J. Currie and Peter W. Draper},
-  title =        "{GENERIC --- A utility for preprocessing generic Fortran and C subroutines}",
+  author =       {S. M. Beard and P. M. Allan and Malcolm J. Currie
+                  and Peter W. Draper},
+  title =        "{GENERIC --- A utility for preprocessing generic
+                  Fortran and C subroutines}",
   type =         {Starlink User Note},
   number =       7,
   institution =  {Starlink Project},
   year =         2006,
-}
-
-
-
-@Manual{uthash,
-  title =        {\texttt{uthash} User Guide},
-  author =    {Troy D. Hanson},
-  url = {https://troydhanson.github.io/uthash/userguide.html},
-  year = 2014,
 }
 
 @techreport{SUN95,
@@ -1465,15 +1636,6 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   number =       95,
   institution =  {Starlink Project},
   year =         2013,
-}
-
-@techreport{SUN102,
-  author =       {Malcolm J. Currie},
-  title =        "{HDSTRACE --- Listing HDS Data Files}",
-  type =         {Starlink User Note},
-  number =       102,
-  institution =  {Starlink Project},
-  year =         2014,
 }
 
 @techreport{SUN96,
@@ -1486,15 +1648,6 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   year =         1986,
 }
 
-@techreport{SUN245,
-  author =       {A. J. Chipperfield},
-  title =        "{HDSTOOLS --- Tools to Display and Edit HDS Objects}",
-  type =         {Starlink User Note},
-  number =       245,
-  institution =  {Starlink Project},
-  year =         2002,
-}
-
 @techreport{SUN98,
   author =       {D. J. Allan and R. J. Vallance and R. D. Saxton},
   title =        "{ASTERIX -- X-ray Data Processing System}",
@@ -1502,42 +1655,6 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   number =       98,
   institution =  {Starlink Project},
   year =         1995,
-}
-
-@techreport{SSN4,
-  author =       {P. C. T. Rees and A. J. Chipperfield and P. W. Draper},
-  title =        "{EMS --- Error Message Service Programmer's Manual}",
-  type =         {Starlink System Note},
-  number =       4,
-  institution =  {Starlink Project},
-  year =         2008,
-}
-
-@techreport{SSN69,
-  author =       {Mark B. Taylor},
-  title =        "{CCDBIG: Assessing CCDPACK resource usage for large data sets}",
-  type =         {Starlink System Note},
-  number =       69,
-  institution =  {Starlink Project},
-  year =         1998,
-}
-
-@techreport{SSN23,
-  author =       {S. E. Rankin and M. J. Bly and T. M . Gledhill and C. A. Clayton},
-  title =        "{Starlink Benchmarking Utility}",
-  type =         {Starlink System Note},
-  number =       23,
-  institution =  {Starlink Project},
-  year =         2003,
-}
-
-@Misc{w3chtml5,
-  author =       {Ian Hickson and others},
-  title =        "{HTML5 --- A vocabulary and associated APIs for HTML
-                  and XHTML}",
-  url =          {http://www.w3.org/TR/html5/},
-  howpublished = {W3C Proposed Recommendation},
-  year =         2014,
 }
 
 @Misc{WrightGiddings1983,
@@ -1548,176 +1665,50 @@ booktitle =      {Astronomical Data Analysis Software and Systems IV},
   year =         1983,
 }
 
-@inproceedings{B1_adassxxiv,
-  author =       "Jessica Mink and Robert G. Mann and Robert Hanisch and Arnold Rots and Rob Seaman and Tim Jenness and Brian Thomas",
-  booktitle =    "Astronomical Data Analysis Software and Systems XXIV",
-  title =        "{The Past, Present and Future of Astronomical Data Formats}",
-  year =         2015,
-  editor =       "Taylor, A. R. and Stil, J. M.",
-  volume =       "in press",
-  archivePrefix ="arXiv",
-  eprint =       {1411.0996},
-  series =       "ASP Conf.\ Ser.",
-}
-
-
-
-@Book{pyhdf5,
-  author =    {Andrew Collette},
-  title =        {Python and HDF5},
-  publisher =    {O'Reilly Media, Inc.},
-  year =         {2013},
-  note =         {ISBN: 978-1-449-36783-1},
-}
-
-@inproceedings{P3-1_adassxxiv,
-       author          = {Reinhold Schaaf and Adam Brazier and
-                          Tim Jenness and Thomas Nikola and Martin Shepherd},
-       booktitle       = {Astronomical Data Analysis Software and Systems XXIV},
-       title           = {{A new HDF5 based raw data model for CCAT}},
-       year            = 2014,
-       archivePrefix ="arXiv",
-       eprint =       {1410.8788},
-       editor          = "Taylor, A. R. and Stil, J. M.",
-       volume          = "in press",
-       series          = "\aspconf",
-}
-
-@inproceedings{O4-4_adassxxiv,
-  author =       "Daniel Price and L. Greenhill and B. Barsdell",
-  booktitle =    "Astronomical Data Analysis Software and Systems XXIV",
-  title =        {{Is HDF5 a good format to replace UVFITS?}},
-  year =         2014,
-   archivePrefix ="arXiv",
-       eprint =       {1410.8788},
-  editor =       "Taylor, A. R. and Stil, J. M.",
-  volume =       "in press",
-  series =       "\aspconf",
-}
-
-
-@article{Dougherty:2009:UBI:1562764.1562781,
- author = {Dougherty, Matthew T. and Folk, Michael J. and Zadok, Erez and Bernstein, Herbert J. and Bernstein, Frances C. and Eliceiri, Kevin W. and Benger, Werner and Best, Christoph},
- title = "{Unifying Biological Image Formats with HDF5}",
- journal = {Commun. ACM},
- issue_date = {October 2009},
- volume = {52},
- number = {10},
- month = oct,
- year = {2009},
- issn = {0001-0782},
- pages = {42--47},
- numpages = {6},
- doi = {10.1145/1562764.1562781},
- acmid = {1562781},
- publisher = {ACM},
- address = {New York, NY, USA},
-}
-
-@article{deBuyl20141546,
-title = "{H5MD: A structured, efficient, and portable file format for molecular data}",
-journal = "Computer Physics Communications ",
-volume = "185",
-number = "6",
-pages = "1546 - 1553",
-year = "2014",
-note = "",
-issn = "0010-4655",
-doi = "10.1016/j.cpc.2014.01.018",
-author = "Pierre de Buyl and Peter H. Colberg and Felix Höfling",
-keywords = "Molecular simulation",
-keywords = "\{HDF5\} "
-}
-
-@InProceedings{2005Yang,
-  author =       {MuQun Yang and R. E. McGrath and M. Folk},
-  title =        "{HDF5 --- A High performance data Format for Earth Science}",
-  url = {https://ams.confex.com/ams/pdfpapers/88475.pdf},
-  booktitle = {21st International Conference on Interactive Information Processing Systems (IIPS) for Meteorology, Oceanography, and Hydrology},
- pages = {P2.42},
-year =      {2005},
-}
-
-@InProceedings{2004Rew,
-  author =       {Russell K. Rew and E. J. Hartnett},
-  title =        "{Merging NetCDF and HDF5}",
-  url = {https://ams.confex.com/ams/pdfpapers/73771.pdf},
-  booktitle = {21st International Conference on Interactive Information Processing Systems (IIPS) for Meteorology, Oceanography, and Hydrology},
- pages = {P1.11},
-year =      {2004},
-}
-
-@article{1742-6596-425-6-062008,
-  author={U K Pedersen and N Rees and M Basham and F J K Ferner},
-  title={Handling high data rate detectors at Diamond Light Source},
-  journal={Journal of Physics: Conference Series},
-  volume={425},
-  number={6},
-  pages={062008},
-  doi={10.1088/1742-6596/425/6/062008},
-  year={2013},
-}
-
-@Article{2015Economou,
-  author =       {Frossie Economou and S\'{e}verin Gaudet and Tim
-                  Jenness and Russell O.\ Redman and Sharon Goliath
-                  and Patrick Dowler and Malcolm J. Currie and Graham S. Bell
-                  and Sarah F. Graves and John Ouellette and David Schade and Antonio
-                  Chrysostomou},
-  title =        "{Observatory/data centre partnerships and the
-                  VO-centric archive: The JCMT Science Archive
-                  experience}",
-  archivePrefix ="arXiv",
-  eprint =       {1412.4399},
-  journal =      {Astron.\ Comp.},
-  year =         2015,
-  volume =       {in press},
-}
-
 @TechReport{asdf,
   author =       {Michael Droettboom and Erik Bray},
   title =        {ASDF Standard},
   institution =  {Space Telescope Science Institute},
-  year =         {2014},
-  url = {http://asdf-standard.readthedocs.org/en/latest/},
-}
-
-@INPROCEEDINGS{2014SPIE.9153E..03B,
-   author = {{Bintley}, D. and {Holland}, W.~S. and {MacIntosh}, M.~J. and 
-	{Friberg}, P. and {Bell}, G.~S. and {Berke}, D.~A. and {Berry}, D.~S. and 
-	{Berthold}, R.~M. and {Cookson}, J.~L. and {Coulson}, I.~M. and 
-	{Currie}, M.~J. and {Dempsey}, J.~T. and {Gibb}, A.~G. and {Gorges}, B.~H. and 
-	{Graves}, S.~F. and {Jenness}, T. and {Johnstone}, D.~I. and 
-	{Parsons}, H.~A.~L. and {Thomas}, H.~S. and {Walther}, C. and 
-	{Wouterloot}, J.~G.~A.},
-    title = "{SCUBA-2: an update on the performance of the 10,000 pixel bolometer camera after two years of science operation at the JCMT}",
-booktitle = {Millimeter, Submillimeter, and Far-Infrared Detectors and Instrumentation for Astronomy VII},
-     year = 2014,
-   series = {\procspie},
-   volume = 9153,
-   editor= {Wayne S. Holland and Jonas Zmuidzinas},
-    month = aug,
-    pages = {915303},
-      doi = {10.1117/12.2055231},
-   adsurl = {http://adsabs.harvard.edu/abs/2014SPIE.9153E..03B},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@InProceedings{2014SPIE9152-93,
-  author =       {Graham S. Bell and Sarah F. Graves and Malcolm
-                  J. Currie and David S. Berry and Harriet
-                  A. L. Parsons and Tim Jenness and Russell O. Redman
-                  and Jessica T. Dempsey and Douglas I. Johnstone and
-                  Frossie Economou },
-  title =        "{Advanced data products for the JCMT Science
-                  Archive}",
-  booktitle =    "{Software and Cyberinfrastructure for Astronomy
-                  III}",
   year =         2014,
-  editor =       {Gianluca Chiozzi and Nicole M. Radziwill},
-  volume =       9152,
-  series =       {\procspie},
-  pages =        {91522J},
-  doi =          {10.1117/12.2054983},
+  url =          {http://asdf-standard.readthedocs.org/en/latest/},
 }
 
+@article{deBuyl20141546,
+  title =        "{H5MD: A structured, efficient, and portable file
+                  format for molecular data}",
+  journal =      "Computer Physics Communications ",
+  volume =       185,
+  number =       6,
+  pages =        "1546 - 1553",
+  year =         2014,
+  issn =         "0010-4655",
+  doi =          "10.1016/j.cpc.2014.01.018",
+  author =       "Pierre de Buyl and Peter H. Colberg and Felix
+                  Höfling",
+  keywords =     "Molecular simulation",
+  keywords =     "\{HDF5\} "
+}
+
+@Book{pyhdf5,
+  author =       {Andrew Collette},
+  title =        {Python and HDF5},
+  publisher =    {O'Reilly Media, Inc.},
+  year =         2013,
+  note =         {ISBN: 978-1-449-36783-1},
+}
+
+@Manual{uthash,
+  title =        {\texttt{uthash} User Guide},
+  author =       {Troy D. Hanson},
+  url =          {https://troydhanson.github.io/uthash/userguide.html},
+  year =         2014,
+}
+
+@Misc{w3chtml5,
+  author =       {Ian Hickson and others},
+  title =        "{HTML5 --- A vocabulary and associated APIs for HTML
+                  and XHTML}",
+  url =          {http://www.w3.org/TR/html5/},
+  howpublished = {W3C Proposed Recommendation},
+  year =         2014,
+}
