--- a/achds.tex
+++ b/achds.tex
@@ -231,7 +231,7 @@ late 1980s \citep{SSN27a}.
 HDS succeeded in its goal of forming the basis of the Starlink data
 reduction software packages (\ascl{1110.012}) and was and is being
 used at UK observatories for data acquisition and for data reduction
-pipelines \citep{2011tfa..confE..42J,2015oracdr}. Its presence was
+pipelines \citep{2011tfa..confE..42J,2015A&C.....9...40J}. Its presence was
 pervasive within the Starlink software stack, being used for parameter
 storage in the ADAM system \citep{1992ASPC...25..126A} and in a
 graphics database system \citep{SUN48} in addition to storing
@@ -295,7 +295,7 @@ sizes. This was partially implemented for version 4 of the format but
 was never completed. It is not clear how much work it would be to finish
 this work or whether anyone remaining can do so. As data rates
 increase it is clear that the next generation of heterodyne arrays
-\citep[e.g.,][]{jenness_spie2014} will generate data cubes that exceed
+\citep[e.g.,][]{2014SPIE.9152E..2WJ} will generate data cubes that exceed
 the capacity of a 32-bit integer counter and these files will render
 the Starlink software and associated data pipelines unusable without
 HDS being upgraded. Adding 64-bit support to HDS is a necessary but
@@ -977,7 +977,7 @@ The library has been tested on a number of standard Starlink benchmark
 routines from \textsc{ccdpack} \citep[][\ascl{1403.021}]{SUN139},
 \textsc{ccdbig}, and \textsc{starbench} \citep{SSN23}. An example data reduction
 test was also executed using SCUBA-2 data and the \textsc{orac-dr}
-pipeline \citep[][\ascl{1310.001}]{2015oracdr}\footnote{These were
+pipeline \citep[][\ascl{1310.001}]{2015A&C.....9...40J}\footnote{These were
   observations 28, 31, 35, 44 and 51  from 2012 June 11th, reduced
   using the JCMT Science Archive public processing recipe
   \citep{2014SPIE9152-93}}. The results are shown in
